sample annotations support for linear regression test

--- a/Phase 0 - Binary Classification Between Lungs & Liver Cells/2. Keras Test.ipynb
+++ b/Phase 0 - Binary Classification Between Lungs & Liver Cells/2. Keras Test.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import Sequential\n",
@@ -30,108 +22,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 994 images belonging to 2 classes.\n",
-      "Found 418 images belonging to 2 classes.\n",
-      "Epoch 1/50\n",
-      "62/62 [==============================] - 11s - loss: 0.5094 - acc: 0.7833 - val_loss: 0.3297 - val_acc: 0.8774\n",
-      "Epoch 2/50\n",
-      "62/62 [==============================] - 4s - loss: 0.3004 - acc: 0.8921 - val_loss: 0.1223 - val_acc: 0.9627\n",
-      "Epoch 3/50\n",
-      "62/62 [==============================] - 4s - loss: 0.2742 - acc: 0.9072 - val_loss: 0.0621 - val_acc: 0.9900\n",
-      "Epoch 4/50\n",
-      "62/62 [==============================] - 4s - loss: 0.3083 - acc: 0.8923 - val_loss: 0.0971 - val_acc: 0.9652\n",
-      "Epoch 5/50\n",
-      "62/62 [==============================] - 5s - loss: 0.2213 - acc: 0.9264 - val_loss: 0.0801 - val_acc: 0.9776\n",
-      "Epoch 6/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1934 - acc: 0.9304 - val_loss: 0.1199 - val_acc: 0.9726\n",
-      "Epoch 7/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1979 - acc: 0.9254 - val_loss: 0.0407 - val_acc: 0.9900\n",
-      "Epoch 8/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1692 - acc: 0.9456 - val_loss: 0.1153 - val_acc: 0.9701\n",
-      "Epoch 9/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1786 - acc: 0.9396 - val_loss: 0.1022 - val_acc: 0.9751\n",
-      "Epoch 10/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1575 - acc: 0.9546 - val_loss: 0.0174 - val_acc: 0.9925\n",
-      "Epoch 11/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1816 - acc: 0.9466 - val_loss: 0.0983 - val_acc: 0.9726\n",
-      "Epoch 12/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1834 - acc: 0.9526 - val_loss: 0.2381 - val_acc: 0.9353\n",
-      "Epoch 13/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1344 - acc: 0.9516 - val_loss: 0.1020 - val_acc: 0.9701\n",
-      "Epoch 14/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1354 - acc: 0.9566 - val_loss: 0.0316 - val_acc: 0.9925\n",
-      "Epoch 15/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1506 - acc: 0.9536 - val_loss: 0.0183 - val_acc: 0.9975\n",
-      "Epoch 16/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1067 - acc: 0.9698 - val_loss: 0.0270 - val_acc: 0.9950\n",
-      "Epoch 17/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1687 - acc: 0.9587 - val_loss: 0.0574 - val_acc: 0.9826\n",
-      "Epoch 18/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1346 - acc: 0.9687 - val_loss: 0.0117 - val_acc: 0.9975\n",
-      "Epoch 19/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1516 - acc: 0.9637 - val_loss: 0.0038 - val_acc: 1.0000\n",
-      "Epoch 20/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1595 - acc: 0.9677 - val_loss: 0.0139 - val_acc: 0.9975\n",
-      "Epoch 21/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1399 - acc: 0.9677 - val_loss: 0.0121 - val_acc: 1.0000\n",
-      "Epoch 22/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1146 - acc: 0.9627 - val_loss: 0.1870 - val_acc: 0.9552\n",
-      "Epoch 23/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1045 - acc: 0.9687 - val_loss: 0.0095 - val_acc: 0.9975\n",
-      "Epoch 24/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1551 - acc: 0.9677 - val_loss: 0.0211 - val_acc: 0.9925\n",
-      "Epoch 25/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1003 - acc: 0.9677 - val_loss: 0.0250 - val_acc: 0.9950\n",
-      "Epoch 26/50\n",
-      "62/62 [==============================] - 4s - loss: 0.0873 - acc: 0.9738 - val_loss: 0.0152 - val_acc: 0.9950\n",
-      "Epoch 27/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1377 - acc: 0.9637 - val_loss: 0.0119 - val_acc: 0.9950\n",
-      "Epoch 28/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1231 - acc: 0.9728 - val_loss: 0.0042 - val_acc: 1.0000\n",
-      "Epoch 29/50\n",
-      "62/62 [==============================] - 5s - loss: 0.0882 - acc: 0.9718 - val_loss: 0.0117 - val_acc: 0.9950\n",
-      "Epoch 30/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1101 - acc: 0.9677 - val_loss: 0.0323 - val_acc: 0.9925\n",
-      "Epoch 31/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1278 - acc: 0.9657 - val_loss: 0.0170 - val_acc: 0.9975\n",
-      "Epoch 32/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1207 - acc: 0.9698 - val_loss: 0.0076 - val_acc: 0.9975\n",
-      "Epoch 33/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1231 - acc: 0.9698 - val_loss: 3.7358e-04 - val_acc: 1.0000\n",
-      "Epoch 34/50\n",
-      "62/62 [==============================] - 4s - loss: 0.0952 - acc: 0.9748 - val_loss: 0.1036 - val_acc: 0.9801\n",
-      "Epoch 35/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1341 - acc: 0.9687 - val_loss: 0.0016 - val_acc: 1.0000\n",
-      "Epoch 36/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1353 - acc: 0.9718 - val_loss: 0.0088 - val_acc: 1.0000\n",
-      "Epoch 37/50\n",
-      "62/62 [==============================] - 4s - loss: 0.0737 - acc: 0.9778 - val_loss: 0.0300 - val_acc: 0.9876\n",
-      "Epoch 38/50\n",
-      "62/62 [==============================] - 4s - loss: 0.0884 - acc: 0.9738 - val_loss: 0.0838 - val_acc: 0.9925\n",
-      "Epoch 39/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1246 - acc: 0.9728 - val_loss: 0.0068 - val_acc: 1.0000\n",
-      "Epoch 40/50\n",
-      "62/62 [==============================] - 4s - loss: 0.0597 - acc: 0.9778 - val_loss: 0.0268 - val_acc: 0.9950\n",
-      "Epoch 41/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1283 - acc: 0.9647 - val_loss: 0.0023 - val_acc: 1.0000\n",
-      "Epoch 42/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1088 - acc: 0.9718 - val_loss: 0.0106 - val_acc: 0.9950\n",
-      "Epoch 43/50\n",
-      "62/62 [==============================] - 5s - loss: 0.2381 - acc: 0.9588 - val_loss: 0.0035 - val_acc: 0.9975\n",
-      "Epoch 44/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1083 - acc: 0.9798 - val_loss: 0.0174 - val_acc: 0.9950\n",
-      "Epoch 45/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1235 - acc: 0.9667 - val_loss: 0.0249 - val_acc: 0.9925\n",
-      "Epoch 46/50\n",
-      "62/62 [==============================] - 5s - loss: 0.1840 - acc: 0.9617 - val_loss: 0.0045 - val_acc: 1.0000\n",
-      "Epoch 47/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1727 - acc: 0.9647 - val_loss: 0.0272 - val_acc: 0.9950\n",
-      "Epoch 48/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1344 - acc: 0.9698 - val_loss: 0.0495 - val_acc: 0.9776\n",
-      "Epoch 49/50\n",
-      "62/62 [==============================] - 4s - loss: 0.0733 - acc: 0.9758 - val_loss: 0.0055 - val_acc: 1.0000\n",
-      "Epoch 50/50\n",
-      "62/62 [==============================] - 4s - loss: 0.1142 - acc: 0.9667 - val_loss: 0.0074 - val_acc: 0.9950\n"
+      "Found 5454 images belonging to 2 classes.\n",
+      "Found 1666 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -141,8 +33,8 @@
     "\n",
     "train_data_dir = 'data/train'\n",
     "validation_data_dir = 'data/validation'\n",
-    "nb_train_samples = 497*2\n",
-    "nb_validation_samples = 209*2\n",
+    "nb_train_samples = 12612\n",
+    "nb_validation_samples = 2912\n",
     "epochs = 50\n",
     "batch_size = 16\n",
     "\n",
@@ -196,8 +88,83 @@
     "    validation_data_dir,\n",
     "    target_size=(img_width, img_height),\n",
     "    batch_size=batch_size,\n",
-    "    class_mode='binary')\n",
-    "\n",
+    "    class_mode='binary')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "788/788 [==============================] - 66s - loss: 0.3029 - acc: 0.8786 - val_loss: 0.1553 - val_acc: 0.9516\n",
+      "Epoch 2/50\n",
+      "788/788 [==============================] - 62s - loss: 0.2245 - acc: 0.9242 - val_loss: 0.1029 - val_acc: 0.9691\n",
+      "Epoch 3/50\n",
+      "788/788 [==============================] - 63s - loss: 0.1747 - acc: 0.9413 - val_loss: 0.0838 - val_acc: 0.9663\n",
+      "Epoch 4/50\n",
+      "788/788 [==============================] - 62s - loss: 0.1684 - acc: 0.9483 - val_loss: 0.1143 - val_acc: 0.9560\n",
+      "Epoch 5/50\n",
+      "788/788 [==============================] - 63s - loss: 0.1525 - acc: 0.9534 - val_loss: 0.0983 - val_acc: 0.9657\n",
+      "Epoch 6/50\n",
+      "788/788 [==============================] - 62s - loss: 0.1534 - acc: 0.9580 - val_loss: 0.1240 - val_acc: 0.9639\n",
+      "Epoch 7/50\n",
+      "788/788 [==============================] - 76s - loss: 0.1460 - acc: 0.9589 - val_loss: 0.2427 - val_acc: 0.9430\n",
+      "Epoch 8/50\n",
+      "788/788 [==============================] - 73s - loss: 0.1332 - acc: 0.9654 - val_loss: 0.5240 - val_acc: 0.8863\n",
+      "Epoch 9/50\n",
+      "788/788 [==============================] - 83s - loss: 0.1622 - acc: 0.9604 - val_loss: 0.1190 - val_acc: 0.9554\n",
+      "Epoch 10/50\n",
+      "788/788 [==============================] - 75s - loss: 0.2117 - acc: 0.9522 - val_loss: 0.0907 - val_acc: 0.9657\n",
+      "Epoch 11/50\n",
+      "365/788 [============>.................] - ETA: 37s - loss: 0.1915 - acc: 0.9550"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-144:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.5/threading.py\", line 914, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.5/threading.py\", line 862, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/a0121533/.virtualenvs/keras/lib/python3.5/site-packages/keras/utils/data_utils.py\", line 568, in data_generator_task\n",
+      "    generator_output = next(self._generator)\n",
+      "  File \"/home/a0121533/.virtualenvs/keras/lib/python3.5/site-packages/keras/preprocessing/image.py\", line 737, in __next__\n",
+      "    return self.next(*args, **kwargs)\n",
+      "  File \"/home/a0121533/.virtualenvs/keras/lib/python3.5/site-packages/keras/preprocessing/image.py\", line 1033, in next\n",
+      "    target_size=self.target_size)\n",
+      "  File \"/home/a0121533/.virtualenvs/keras/lib/python3.5/site-packages/keras/preprocessing/image.py\", line 322, in load_img\n",
+      "    img = pil_image.open(path)\n",
+      "  File \"/home/a0121533/.virtualenvs/keras/lib/python3.5/site-packages/PIL/Image.py\", line 2477, in open\n",
+      "    fp = builtins.open(filename, \"rb\")\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'data/train/livers/GTEX-1117F-1126_45.png'\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-4f5145c2e0bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_generator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     validation_steps=nb_validation_samples // batch_size)\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'first_try.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/keras/lib/python3.5/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     86\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 87\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/keras/lib/python3.5/site-packages/keras/models.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, initial_epoch)\u001b[0m\n\u001b[1;32m   1119\u001b[0m                                         \u001b[0mworkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1120\u001b[0m                                         \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1121\u001b[0;31m                                         initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1123\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0minterfaces\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_generator_methods_support\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/keras/lib/python3.5/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     86\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 87\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/keras/lib/python3.5/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   2009\u001b[0m                 \u001b[0mbatch_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2010\u001b[0m                 \u001b[0;32mwhile\u001b[0m \u001b[0msteps_done\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2011\u001b[0;31m                     \u001b[0mgenerator_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_generator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2012\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2013\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'__len__'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
     "model.fit_generator(\n",
     "    train_generator,\n",
     "    steps_per_epoch=nb_train_samples // batch_size,\n",
@@ -206,6 +173,26 @@
     "    validation_steps=nb_validation_samples // batch_size)\n",
     "\n",
     "model.save_weights('first_try.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.preprocessing.image.DirectoryIterator at 0x7f89f8fd19b0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_generator"
    ]
   },
   {
